css/index.css
/* ... */
/* Top bar */
.top-bar {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: var(--pantone-habanero-gold);
    border-bottom: 4px solid var(--pantone-muskmelon);
    display: flex;
    align-items: center;
    gap: 12px;
    padding: 12px 16px;
    z-index: 1000;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
}

.top-bar .logo h1 {
    font-size: 1.5rem;
    color: var(--pantone-blue-iolite);
}

.logo img:hover {
    max-width: 60px;
    max-height: 60px;
}

/* Menú Vertical */
.menu-vertical {
    display: flex;
    flex-direction: column;
    max-width: 300px;
    position: absolute;
    top: 50%;
    left: 20px;
    transform: translateY(-50%);
    gap: 1rem;
    z-index: 5;
}

.menu-vertical a{
    text-decoration: none;
    color: var(--pantone-blue-iolite);
}

.menu-vertical .button {
    width: 160px;
    background-color: var(--pantone-habanero-gold);
    color: var(--pantone-blue-iolite);
    border: none;
    padding: 12px 16px;
    font-size: 0.9rem;
    border-radius: 6px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
    cursor: pointer;
    transition: background-color 0.3s;
    display: flex;
    justify-content: center;
}

.menu-vertical .button:hover {
    background-color: var(--pantone-blue-iolite);
    color: var(--color-white);
}


/* =====================
   Sección Lugares
   ===================== */
.sectionContenedor {
    display: flex;
    flex-direction: column;
    gap: 16px;
    padding: 16px;
    z-index: 1;
    background: var(--pantone-tofu);
}

.seclugares header {
    display: flex;
    justify-content: flex-start;
    padding-left: 24px;
    background-color: var(--pantone-mandarin-orange);
    border-radius: 12px 12px 0 0;
    align-items: center;
    height: auto;
}

.contentCards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 16px;
    padding: 24px;
    background-color: var(--pantone-muskmelon);
    border-radius: 0 0 12px 12px;
}

.card {
    flex: 1 1 250px;
    max-width: 300px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    background-color: var(--pantone-muskmelon);
    border-radius: var(--border-radius-l)
}

.card picture {
    display: block;
    width: 100%;
    height: 250px;
    overflow: hidden;
    border-radius: 12px 12px 0 0;
}

.card picture img,
.card img.imgCard {
    width: 100%;
    height: 250px;
    border-radius: 12px 12px 0 0;
    object-fit: cover;
    display: block;
}

.card:hover {
    transform: scale(1.05);
}

.cardText {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 0.5rem;
    flex: 1;
    overflow: hidden;
    background-color: var(--pantone-tofu);
    border-radius: 0 0 12px 12px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    padding: 1rem;
    border-top: 4px solid var(--pantone-habanero-gold);
    width: 100%;
    box-sizing: border-box;
    text-align: left;
    word-wrap: break-word;
    cursor: pointer;
}

.cardText h3 {
    font-size: 1rem;
    line-height: 1.2;
    margin-bottom: 0.5rem;

}

.cardText p {
    font-size: 0.9rem;
    line-height: 1.3;
    margin-bottom: 0.5rem;
}

.cardText h3,
.cardText p {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    /* máx. 2 líneas */
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.cardText button {
    padding: 8px;
    font-size: 0.9rem;
    background-color: var(--color-white);
    color: var(--pantone-blue-iolite);
    width: 100%;
    box-sizing: border-box;
    flex-shrink: 0;
    border: none;
    border-radius: var(--border-radius-m);
    cursor: pointer;
}

.card-button {
    display: inline-block;
    padding: 8px;
    font-size: 0.9rem;
    background-color: var(--color-white);
    color: var(--pantone-blue-iolite);
    text-decoration: none;
    width: 100%;
    box-sizing: border-box;
    border: none;
    border-radius: 4px;
    text-align: center;
    cursor: pointer;
    transition: background-color 0.3s;
}

.card-button:hover {
    background-color: var(--pantone-blue-iolite);
    color: var(--color-white);
}

.slider-wrapper {
    position: relative;
    width: 100%;
    /* overflow: hidden; */
    padding: 1rem;
}

.slider-container {
    display: flex;
    overflow-x: hidden;
    scroll-behavior: smooth;
    gap: 16px;
    scroll-snap-type: x mandatory;
    padding: 0 1rem;
    white-space: nowrap;
}

.slider-container .card {
    display: flex;
    flex-direction: column;
    height: auto;
    flex: 0 0 auto;
    width: 250px;
    max-width: 90%;
    scroll-snap-align: start;
    background-color: var(--pantone-muskmelon);
    border-radius: var(--border-radius-l);
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

.arrow {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40px;
    height: 40px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background-color: var(--pantone-habanero-gold);
    border: none;
    font-size: 1.2rem;
    /* más chico que el botón */
    line-height: 1;
    padding: 0;
    color: black;
    border-radius: 50%;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    z-index: 10;
    cursor: pointer;
}


.arrow.left {
    left: -15px;
}

.arrow.right {
    right: -15px;
}

@media (max-width: 1024px) {
    .cardText button {
        font-size: 0.8rem;
    }
}

@media (max-width: 768px) {
    .cardText button {
        font-size: 0.75rem;
        padding: 6px;
        border: none;
    }

    .arrow {
        display: none;
    }

    .slider-container {
        overflow-x: scroll;
        scroll-padding: 0 1rem;
    }

    .slider-container .card {
        scroll-snap-align: center;
    }
}

/* =====================
   Sección Hospedaje
   ===================== */
.sechospedaje {
    display: flex;
    background-color: var(--pantone-aquarelle);
    border-radius: 24px;
}
/* ... */

